--- a/lambda/sendResume/package.json
+++ b/lambda/sendResume/package.json
@@ -13,6 +13,7 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.980.0",
     "reductoai": "^0.13.0"
   }
 }
