--- a/lambda/processResume/package.json
+++ b/lambda/processResume/package.json
@@ -13,6 +13,8 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
-    "reductoai": "^0.13.0"
+    "@openrouter/ai-sdk-provider": "^2.1.1",
+    "reductoai": "^0.13.0",
+    "zod": "^4.3.6"
   }
 }
