--- a/lambda/researchCandidate/package.json
+++ b/lambda/researchCandidate/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mendable/firecrawl-js": "^4.12.0",
+    "@openrouter/ai-sdk-provider": "^2.1.1",
     "reductoai": "^0.13.0",
     "zod": "^4.3.6"
   }
