--- a/lambda/researchCandidateTavily/package.json
+++ b/lambda/researchCandidateTavily/package.json
@@ -13,6 +13,8 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
-    "@tavily/core": "^0.7.1"
+    "@openrouter/ai-sdk-provider": "^2.1.1",
+    "@tavily/core": "^0.7.1",
+    "zod": "^4.3.6"
   }
 }
