--- a/lambda/processResume/package.json
+++ b/lambda/processResume/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.980.0",
+    "@aws-sdk/client-s3": "^3.980.0",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "reductoai": "^0.13.0",
     "zod": "^4.3.6"
