--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
           cd ../sendResume
           npm ci
           npm run build
+          cd ../fetchResults
+          npm ci
+          npm run build
       - name: CDK Deploy
         run: npx cdk deploy --require-approval never
         env:
