--- a/lambda/processResume/package.json
+++ b/lambda/processResume/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.980.0",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "reductoai": "^0.13.0",
+    "resend": "^6.9.1",
     "zod": "^4.3.6"
   }
 }
