--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,4 +52,5 @@ jobs:
           PIPELINE_ID: ${{ secrets.PIPELINE_ID }}
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
           # FIRECRAWL_API_KEY: ${{ secrets.FIRECRAWL_API_KEY }}
