--- a/lambda/researchCandidateTavily/package.json
+++ b/lambda/researchCandidateTavily/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/lib-dynamodb": "^3.980.0",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "@tavily/core": "^0.7.1",
+    "resend": "^6.9.1",
     "zod": "^4.3.6"
   }
 }
