--- a/lambda/processResume/package.json
+++ b/lambda/processResume/package.json
@@ -17,9 +17,11 @@
     "@aws-sdk/client-lambda": "^3.980.0",
     "@aws-sdk/client-s3": "^3.980.0",
     "@aws-sdk/lib-dynamodb": "^3.981.0",
+    "@google/genai": "^1.41.0",
     "@openrouter/ai-sdk-provider": "^2.1.1",
     "reductoai": "^0.13.0",
     "resend": "^6.9.1",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zod-to-json-schema": "^3.25.1"
   }
 }
