--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
     "aws-cdk-lib": "^2.236.0",
     "constructs": "^10.0.0",
     "dotenv": "^17.2.3"
