--- a/lambda/processResume/tsconfig.json
+++ b/lambda/processResume/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "./",
     "rootDir": ".",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "target": "ES2022",
     "lib": ["ES2022"],
     "declaration": false,
