--- a/lambda/researchCandidateTavily/package.json
+++ b/lambda/researchCandidateTavily/package.json
@@ -2,6 +2,7 @@
   "name": "research-candidate",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "./index.js",
   "scripts": {
     "build": "tsc",
